tethys/deploy-tethys.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tethys-dep
  labels:
    app: tethys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tethys
  template:
    metadata:
      labels:
        app: tethys
    spec:
      containers:
      - name: tethyscore
        image: docker.io/tethysplatform/tethys-core:latest
        imagePullPolicy: Always
        ports:
        - protocol: TCP
          containerPort: 8000
          hostPort: 8000
        env : 
        - name: HOSTNAME
          value: "localhost"
        - name: ALLOWED_HOSTS
          valueFrom: 
            fieldRef:
              fieldPath: spec.podIP
        - name: CLIENT_MAX_BODY_SIZE
          value: 75M
        - name: NGINX_PORT
          value: "80"
        - name: TETHYS_DB_HOST
          value: tethys-pg
        - name: TETHYS_DB_NAME
          value: tethys_platform
        - name: TETHYS_DB_USERNAME
          value: tethys_default
        - name: TETHYS_DB_PASSWORD
          value: pass
        - name: TETHYS_DB_SUPERUSER
          value: tethys_super
        - name: TETHYS_DB_SUPERUSER_PASS
          value: pass
        - name: TETHYS_PORT
          value: "8000"
        # envFrom:
        #   - configMapRef:
        #       name: tethys-global-config-prod

---
apiVersion: v1
kind: Service
metadata:
  name: tethys
spec:
  selector:
    app: tethys
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    #name: tethys-port
