tethys/simple.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  selector:
    app: tethys
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
