tethys/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld
  # namespace: hello-web-app-routing
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: cheese.rodeo
    http:
      paths:
      - backend:
          service:
            name: tethys
            port:
              number: 8000
        path: /
        pathType: Prefix
